# yunwen-doc-ai-platform

./: .env.example  .gitignore  README.md  api_request.py  pyproject.toml  run_mcp_server.py
app/: mcp_server.py
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py  neo4j_utils.py
app/conf/: lm_config.py
app/core/: load_prompt.py  logger.py
app/eval/: dashboard.py  experiment_manager.py  golden_set_builder.py  ragas_evaluator.py  report_generator.py
app/eval/config/experiments/: exp_001_baseline.yaml  exp_002_routing.yaml  exp_003_crag.yaml  (+1 more)
app/import_process/: 导入过程记录文档.txt
app/import_process/agent/: main_graph.py  state.py
app/import_process/api/: import_server.py
app/import_process/page/: import.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/api/: query_server.py
app/query_process/page/: chat.html  query_monitor.html
app/query_process/sse/: sse_step_1.html  sse_step_2.html
app/test/: test_circuit_breaker.py  test_mcp_server_serialization.py
app/test/test_routing/: test_classifier.py
app/tool/: download_bgem3.py
app/utils/: CIRCUIT_BREAKER_README.md  circuit_breaker.py  rate_limit_utils.py  sse_utils.py  task_utils.py
data/: golden_set.jsonl
doc/: README.md
docker/: docker-compose.yaml
docs/: 项目报告.md
prompts/: answer_out.prompt  crag_query_rewrite.prompt  golden_set_generate.prompt  hyde_prompt.prompt  query_routing.prompt  rewritten_query_and_itemnames.prompt
reports/eval_20260510_191855/: report.md  summary.json
scripts/: run_eval.py
(+22 files in other folders)
