[project]
name = "rag-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.0+cu126",
    "torchvision==0.24.0+cu126",
    "torchaudio==2.9.0+cu126",
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.36.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pymilvus>=2.6.12",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "regex>=2026.4.4",
    "uvicorn>=0.46.0",
    "ragas>=0.2.0",
    "streamlit>=1.40.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0",
    "datasets>=3.0.0",
    "plotly>=5.24.0",
    "markdown>=3.7",
    "fastmcp>=2.9.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"  # CUDA 12.6 版本
explicit = true         # 只有明确指定的包才会从此索引下载

# 2. 强制所有 torch 相关包都从这个索引安装
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }   # 如果日后安装的话
torchaudio = { index = "pytorch-cu126" }    # 如果日后安装的话
